# sutra-markdown

./: .dockerignore  .env.docker  .env.example  .gitignore  ARCHITECTURE.md  DOCKER_QUICKSTART.md  Dockerfile  LICENSE  PROJECT_STRUCTURE.md  README.md  build_model_cache.sh  clean_install.sh  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-production.txt  requirements.txt
docs/: API_DOCUMENTATION.md  DEPLOYMENT_OPTIONS.md  DOCKER_ARCHITECTURE.md  DOCKER_DEPLOYMENT.md  MIGRATION_GUIDE.md  PRODUCTION_MODEL_CACHE.md  PYDANTIC_MODELS_REFERENCE.md  README.md
docs/archive/: API_VS_SELFHOSTED.md  DEPLOYMENT_SUMMARY.md  QUICK_START_EMBEDDINGS.md  REFACTORING_PROGRESS.md  SELF_HOSTED_DISCOVERY.md  USAGE_TRACKING.md
docs/development/: DOCUMENTATION_UPDATE_SUMMARY.md  PHASE7_COMPLETE.md  PRODUCTION_HARDENING_COMPLETE.md
nginx/: nginx.conf
scripts/: download_model.py  download_vision_model.py  healthcheck.sh
sutra/: __init__.py  config.py  exceptions.py  logging_config.py
sutra/api/: __init__.py  app.py  dependencies.py  models.py  security.py
sutra/cache/: __init__.py  base.py  document_cache.py  embedding_cache.py  manager.py  result_cache.py
sutra/cli/: __init__.py
sutra/converters/: __init__.py  base.py  content_analyzer.py  factory.py  outputs.py  tier1.py  tier2.py  tier3.py
sutra/exporters/: __init__.py
sutra/intelligence/: __init__.py  embeddings.py  high_performance_embeddings.py  local_embeddings.py  universal_extraction.py  vision_embeddings.py
sutra/monitoring/: __init__.py  nomic_usage.py
sutra/parsers/: __init__.py  base.py  csv.py  docx.py  factory.py  html.py  image.py  pdf.py  pptx.py  text.py  xlsx.py
sutra/router/: __init__.py  analyzer.py  router.py
web-ui/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  QUICKSTART.md  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-ui/src/: App.tsx  main.tsx  vite-env.d.ts
web-ui/src/components/: index.ts
web-ui/src/components/ConversionResult/: ConversionResult.tsx  index.ts
web-ui/src/components/FileUpload/: FileUpload.tsx
web-ui/src/pages/Home/: HomePage.tsx
web-ui/src/services/api/: client.ts  conversion.ts  health.ts  index.ts  websocket.ts
web-ui/src/theme/: theme.ts
web-ui/src/types/: api.ts  components.ts  mui.d.ts  ui.ts
web-ui/src/utils/: index.ts
